// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Sin Imagen
  </span>
</div>
`;

exports[`ProductTitle Debe de mostrar el componente correctamente 1`] = `
<span
  className="productDescription undefined"
>
  Custom Producto
</span>
`;
